--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Calculator</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <p>hello world!</p>
+        <div>hello world!</p>
     </body>
 </html>
