--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Calculator</title>
+        <script src="javascript.js" defer></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>hello world!</p>
+        <div >hello world!</p>
+
+
     </body>
 </html>
