--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div >hello world!</p>
-
-
+        <h1>Professional Calculator</h1>
+        <div class="keypad"></div>
     </body>
 </html>
