--- a/index.html
+++ b/index.html
@@ -7,7 +7,39 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Professional Calculator</h1>
-        <div class="keypad"></div>
+        <h1>Calculator</h1>
+        
+        <div class="calculator">
+            <div class="screen">
+                <div class="operationScreen"></div>
+            </div>
+            
+            <div class="keypad" id="keypad">
+                <button class="clearBtn">C</button>
+                <button class="delBtn">DEL</button>
+                <button class="equalsBtn btn-orange">=</button>
+
+                <button class="btn">7</button>
+                <button class="btn">8</button>
+                <button class="btn">9</button>
+                <button class="btn btn-offwhite">÷</button>
+
+                <button class="btn">4</button>
+                <button class="btn">5</button>
+                <button class="btn">6</button>
+                <button class="btn btn-offwhite">x</button>
+
+                <button class="btn">1</button>
+                <button class="btn">2</button>
+                <button class="btn">3</button>
+                <button class="btn btn-offwhite">-</button>
+
+                <button class="btn">Click me!</button>
+                <button class="btn">0</button>
+                <button class="btn">.</button>
+                <button class="btn btn-offwhite">+</button>
+            </div>
+
+        </div>
     </body>
 </html>
