Enable buttons 0-9 & update screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <div class="calculator">
             <div class="screen">
-                <div class="operationScreen"></div>
+                <div class="operationScreen" id="operationScreen">0</div>
             </div>
             
             <div class="keypad" id="keypad">
@@ -19,23 +19,23 @@
                 <button class="delBtn">DEL</button>
                 <button class="equalsBtn btn-orange">=</button>
 
-                <button class="btn">7</button>
-                <button class="btn">8</button>
-                <button class="btn">9</button>
-                <button class="btn btn-offwhite">÷</button>
+                <button class="btn num">7</button>
+                <button class="btn num">8</button>
+                <button class="btn num">9</button>
+                <button class="btn btn-offwhite" id="divide">÷</button>
 
-                <button class="btn">4</button>
-                <button class="btn">5</button>
-                <button class="btn">6</button>
+                <button class="btn num">4</button>
+                <button class="btn num">5</button>
+                <button class="btn num">6</button>
                 <button class="btn btn-offwhite">x</button>
 
-                <button class="btn">1</button>
-                <button class="btn">2</button>
-                <button class="btn">3</button>
+                <button class="btn num">1</button>
+                <button class="btn num">2</button>
+                <button class="btn num">3</button>
                 <button class="btn btn-offwhite">-</button>
 
                 <button class="btn">Click me!</button>
-                <button class="btn">0</button>
+                <button class="btn num">0</button>
                 <button class="btn">.</button>
                 <button class="btn btn-offwhite">+</button>
             </div>
