--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
             </div>
             
             <div class="keypad" id="keypad">
-                <button class="clearBtn">C</button>
-                <button class="delBtn">DEL</button>
-                <button class="equalsBtn btn-orange">=</button>
+                <button class="clearBtn action">C</button>
+                <button class="delBtn action">DEL</button>
+                <button class="equalsBtn btn-orange action">=</button>
 
                 <button class="btn num">7</button>
                 <button class="btn num">8</button>
                 <button class="btn num">9</button>
-                <button class="btn btn-offwhite" id="divide">÷</button>
+                <button class="btn btn-offwhite op">÷</button>
 
                 <button class="btn num">4</button>
                 <button class="btn num">5</button>
                 <button class="btn num">6</button>
-                <button class="btn btn-offwhite">x</button>
+                <button class="btn btn-offwhite op">x</button>
 
                 <button class="btn num">1</button>
                 <button class="btn num">2</button>
                 <button class="btn num">3</button>
-                <button class="btn btn-offwhite">-</button>
+                <button class="btn btn-offwhite op">-</button>
 
                 <button class="btn">Click me!</button>
                 <button class="btn num">0</button>
-                <button class="btn">.</button>
-                <button class="btn btn-offwhite">+</button>
+                <button class="btn num dot">.</button>
+                <button class="btn btn-offwhite op">+</button>
             </div>
 
         </div>
